Fix z-index bug with nav bar over grids

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ html, body {
   top: 0;
   left: 0;
   background-color: #111;
+  z-index: 999;
 }
 #navList {
   margin: 0;
